<resources>
    <string name="app_name">Location Tracker</string>
    <string name="locator">Mobile Locator</string>
    <string name="mobileloc">locator</string>
    <string name="sugartest">Sugar Test</string>
    <string name="compass">Compass</string>
    <string name="flashtools">Flash Tools</string>
    <string name="ringtones">Ringtones</string>
    <string name="cb">Call Block</string>
    <string name="std">STD Codes</string>
    <string name="ad">ad view</string>
    <string name="isd">ISD Codes</string>
    <string name="setting">Settings</string>
    <string name="report">Report</string>
    <string name="flash_screen">Flash Screen</string>
    <string name="flash_clap">Flash on Clap</string>
    <string name="flash_alert">Flash Alerts</string>
    <string name="ringtone_create" translatable="false">Create</string>
    <string name="ringtones_save">Save</string>
    <string name="sugar_healthtips">Health Tips</string>
    <string name="sugar_levels">Sugar Levels</string>
    <string name="sugar_info">Sugar Info</string>
    <string name="sugar_wd_map">BS World Map</string>
    <string name="sugar_test">Sugar Test</string>
    <string name="sugar_diabetes">Diabetes</string>
    <string name="sugar_hba1c">HbA1c</string>
    <string name="sugar_type2">Type2</string>
    <string name="sugar_low">Low Sugar</string>
    <string name="coun_name">Enter Country Name</string>
    <string name="country">Find by Country</string>
    <string name="isd_find">Find by ISD</string>
    <string name="call_block">Block All Calls</string>
    <string name="msg_error">Error: No Flash Found</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/2177258514</string>
    <string name="lbl_ok">OK</string>
    <string name="bannerID">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="array_technology">

        <item>Perl</item>
        <item>Abkhazia</item>
        <item>Afghanistan</item>
        <item>Aland Islands</item>
        <item>Albania</item> <item>Algeria</item> <item>American Samoa</item> <item>Andorra</item> <item>Angola</item> <item>Anguilla</item> <item>Antarctica</item> <item>Antigua and Barbuda</item> <item>Argentina</item> <item>Armenia</item> <item>Aruba</item> <item>Ascension</item> <item>Australia</item> <item>Australian External Territories</item> <item>Austria</item> <item>Azerbaijan</item> <item>Bahamas</item> <item>Bahrain</item> <item>Bangladesh</item> <item>Barbados</item> <item>Barbuda</item> <item>Belarus</item> <item>Belgium</item> <item>Belize</item> <item>Benin</item> <item>Bermuda</item> <item>Bhutan</item> <item>Bolivia</item> <item>Bonaire</item> <item>Bosinia and Herzegovina</item> <item>Botswana</item> <item>Brazil</item> <item>British indian ocean Trritory</item> <item>British Virgin Islands</item> <item>Brunei</item> <item>Bulgaria</item> <item>Burkina Faso</item> <item>Burma</item> <item>Burundi</item> <item>Cambodia</item> <item>Cameroon</item> <item>Canada</item> <item>Cape Verde</item> <item>Caribbean Netherlands</item> <item>Cayman Islands</item> <item>Central African Republic</item> <item>Chad</item> <item>Chatham Island, New Zealand</item> <item>Chile</item> <item>China</item> <item>Christmas Island</item> <item>Cocos(Keeling) Islands</item> <item>Colombia</item> <item>Comoros</item> <item>Congo</item> <item>Congo, Democratic Republic of the (Zaire)</item> <item>Cook Islands</item> <item>Costa Rica</item> <item>Cote dIvoire</item> <item>Croatia</item> <item>Cuba</item> <item>Guantanamo Bay</item> <item>Curacao</item> <item>Cyprus</item> <item>Czech Republic</item> <item>Democratic Republic of the congo</item> <item>Denmark</item> <item>Diego Garcia</item> <item>Djibouti</item> <item>Dominica</item> <item>Dominican Republic</item> <item>East Timor</item> <item>Easter Island</item> <item>Ecuador</item> <item>Egypt</item> <item>El salvador</item> <item>Ellipso</item> <item>EMSAT</item> <item>Equatorial Guinea</item> <item>Eritrea</item> <item>Estonia</item> <item>Ethiopia</item> <item>Falkland islands</item> <item>Faroe Islands</item> <item>Fiji</item> <item>Finland</item> <item>France</item> <item>French Antilles</item> <item>French Guiana</item> <item>French Polynesia</item> <item>Gabon</item> <item>Gambia</item> <item>Gaza Strip</item> <item>Georgia</item> <item>Germany</item> <item>Ghana</item> <item>Gibraltar</item> <item>Greece</item> <item>Greenland</item> <item>Grenada</item> <item>Guadeloupe</item> <item>Guam</item> <item>Guatemala</item> <item>Guernsey</item> <item>Guinea</item> <item>Guinea-Bissau</item> <item>Guyana</item> <item>Haiti</item> <item>Holy See(Vatican City)</item> <item>Honduras</item> <item>Hong Kong</item> <item>Hungary</item> <item>Iceland</item> <item>India</item> <item>Indonesia</item> <item>Iran</item> <item>Iraq</item> <item>Ireland</item> <item>Isle of Man</item> <item>Israel</item> <item>Italy</item> <item>Ivory Coast</item> <item>Jamaica</item> <item>Japan</item> <item>Jersey</item> <item>Jordan</item> <item>Kazakhstan</item> <item>Kenya</item> <item>Kiribati</item> <item>Kosovo</item> <item>Kuwait</item> <item>Kyrgyzstan</item> <item>Laos</item> <item>Latvia</item> <item>Lebanon</item> <item>Lesotho</item> <item>Liberia</item> <item>Libya</item> <item>Liechtenstein</item> <item>Lithuania</item> <item>Luxembourg</item> <item>Macau</item> <item>Macedonia</item> <item>Madagascar</item> <item>Malawi</item> <item>Malaysia</item> <item>Maldives</item> <item>Mali</item> <item>Malta</item> <item>Marshall Islands</item> <item>Martinique</item> <item>Mauritania</item> <item>Mauritius</item> <item>Mayotte</item> <item>Mexico</item> <item>Micronesia</item> <item>Midway Island, USA</item> <item>Moldova</item> <item>Monaco</item> <item>Mongolia</item> <item>Montenegro</item> <item>Montserrat</item> <item>Morocco</item> <item>Mozambique</item> <item>Namibia</item> <item>Nauru</item> <item>Nepal</item> <item>Netherlands</item> <item>Nevis</item> <item>New Caledonia</item> <item>New Zealand</item> <item>Nicaragua</item> <item>Niger</item> <item>Nigeria</item> <item>Niue</item> <item>Norfolk island</item> <item>North Korea</item> <item>Nothan Mariana Islands</item> <item>Norway</item> <item>Oman</item> <item>Pakisthan</item> <item>Palau</item> <item>Palestine</item> <item>Panama</item> <item>Papua New Guinea</item> <item>Paruguay</item> <item>Peru</item> <item>Philippines</item> <item>Pitcairn islands</item> <item>Poland</item> <item>Portugal</item> <item>Puerto Rico</item> <item>Qatar</item> <item>Republic of the congo</item> <item>Romania</item> <item>Russia</item> <item>Rwanda</item> <item>Saba</item> <item>Saint Barthelemy</item> <item>Saint Helena</item> <item>Saint Kitts and Nevis</item> <item>Saint Lucia</item> <item>Saint Martin</item> <item>Saint Pierre and Miquelon</item> <item>Saint Vincent and the Grenadines</item> <item>Samoa</item> <item>San Marino</item> <item>Sao Tome and Principe</item> <item>Sauidi Arabia</item> <item>Senegal</item> <item>Serbia</item> <item>Seychelles</item> <item>Sierra Leone</item> <item>Singapore</item> <item>Slovakia</item> <item>Slovenia</item> <item>Solomon islands</item> <item>Somalia</item> <item>South Africa</item> <item>South Korea</item> <item>South Ossetia</item> <item>South Sudan</item> <item>Spain</item> <item>SriLanka</item> <item>Sudan</item> <item>Suriname</item> <item>Svalbard</item> <item>Swaziland</item> <item>Sweden</item> <item>Switzerland</item> <item>Syria</item> <item>Taiwan</item> <item>Tajikistan</item> <item>Tanzania</item> <item>Thailand</item> <item>Timor-Leste</item> <item>Togo</item> <item>Tokelau</item> <item>Tonga</item> <item>Trinidad and Tobago</item> <item>Tristan da Cunha</item> <item>Tunisia</item> <item>Turkey</item> <item>Turkmenistan</item> <item>Turks and Caicos Islands</item> <item>Tuvalu</item> <item>Uganda</item> <item>Ukraine</item> <item>United Arab Emirates</item> <item>United Kingdom</item> <item>United States</item> <item>Uruguay</item> <item>US Virgin Islands</item> <item>Uzbekistan</item> <item>Vanuatu</item> <item>Venezuela</item> <item>Vietnam</item> <item>Wake Island, USA</item> <item>Wallis and Futuna</item> <item>West Bank</item> <item>Yemen</item> <item>Zambia</item> <item>Zanzibar</item> <item>Zimbabwe</item>

    </string-array>

</resources>
