<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/linearLayout1111" android:layout_width="match_parent" android:layout_height="360dp" android:layout_marginTop="0dp" android:layout_alignParentTop="true">
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/native_adView"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    ads:adSize="300x250"
                    ads:adUnitId="@string/bannerID">

                </com.google.android.gms.ads.AdView>
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/banner_adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/bannerID">
                </com.google.android.gms.ads.AdView>
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:translationY="5000dp"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-3940256099942544/1033173712"/>

            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_below="@+id/linearLayout1111">
                <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="1.5" android:layout_weight="0.5">
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/health_tips"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/healthtipsbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:singleLine="false"
                                android:text="@string/sugar_healthtips"
                                android:onClick="health_tips_bttn"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" />
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/sugar_lvls"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/sugar_levelsbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:singleLine="false"
                                android:text="@string/sugar_levels"
                                android:onClick="sugar_lvls"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" />
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/info"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/sugar_info"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:singleLine="false"
                                android:text="@string/sugar_info"
                                android:onClick="sugar_inf"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" /> </RelativeLayout>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="1.5" android:layout_weight="0.5">
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/world"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/worldmapbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:text="@string/sugar_wd_map"
                                android:onClick="bsmap"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" />
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">
                            <Button
                                android:id="@+id/testsug"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/sugartest"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:singleLine="false"
                                android:text="@string/sugar_test"
                                android:onClick="sug_tst"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" /> </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/dia"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/diabetesbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:text="@string/sugar_diabetes"
                                android:onClick="dbts"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" />
                        </RelativeLayout>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="1.5" android:layout_weight="0.5">
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">

                            <Button
                                android:id="@+id/hb"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/hba1cbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="8dp"
                                android:text="@string/sugar_hba1c"
                                android:onClick="hba1c_bttn"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" />
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">
                            <Button android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textSize="15sp"
                                android:typeface="serif"
                                android:textColor="#000000"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:id="@+id/repo"
                                android:background="@drawable/reports"
                                android:onClick="sugreport"
                                android:paddingBottom="5dp"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:text="@string/report"/>
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.5">
                            <Button
                                android:id="@+id/lowsu"
                                android:layout_width="90dp"
                                android:layout_height="105dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/lowbloodsugarbtn"
                                android:gravity="bottom|center_vertical|center_horizontal|center"
                                android:paddingBottom="7dp"
                                android:singleLine="false"
                                android:text="@string/sugar_low"
                                android:onClick="lowsugr"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:typeface="serif" /></RelativeLayout>
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
